--- a/src/DataCleaning.ipynb
+++ b/src/DataCleaning.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 80,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -49,7 +49,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 53,
+            "execution_count": 81,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -87,7 +87,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 54,
+            "execution_count": 82,
             "metadata": {},
             "outputs": [
                 {
@@ -226,7 +226,7 @@
                             "1  Pirates of the Caribbean: At World's End           6.9        4500  "
                         ]
                     },
-                    "execution_count": 54,
+                    "execution_count": 82,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -237,7 +237,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 55,
+            "execution_count": 83,
             "metadata": {},
             "outputs": [
                 {
@@ -280,7 +280,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 56,
+            "execution_count": 84,
             "metadata": {},
             "outputs": [
                 {
@@ -373,7 +373,7 @@
                             "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
                         ]
                     },
-                    "execution_count": 56,
+                    "execution_count": 84,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -384,7 +384,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 57,
+            "execution_count": 85,
             "metadata": {},
             "outputs": [
                 {
@@ -425,7 +425,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 58,
+            "execution_count": 86,
             "metadata": {},
             "outputs": [
                 {
@@ -434,7 +434,7 @@
                             "4803"
                         ]
                     },
-                    "execution_count": 58,
+                    "execution_count": 86,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -482,7 +482,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 59,
+            "execution_count": 87,
             "metadata": {},
             "outputs": [
                 {
@@ -504,7 +504,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 60,
+            "execution_count": 88,
             "metadata": {},
             "outputs": [
                 {
@@ -533,12 +533,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 61,
+            "execution_count": 89,
             "metadata": {},
             "outputs": [],
             "source": [
                 "# SQL statement to join tables\n",
-                "table_movies_join=\"\"\"SELECT * FROM movies INNER JOIN credits ON movies.title = credits.title\"\"\"\n",
+                "table_movies_join=\"\"\"SELECT * FROM movies INNER JOIN credits USING(title)\"\"\"\n",
                 "\n",
                 "\n",
                 "# Excecuting statements\n",
@@ -554,7 +554,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 62,
+            "execution_count": 90,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -578,7 +578,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 63,
+            "execution_count": 91,
             "metadata": {},
             "outputs": [
                 {
@@ -587,7 +587,7 @@
                     "text": [
                         "<class 'pandas.core.frame.DataFrame'>\n",
                         "RangeIndex: 4809 entries, 0 to 4808\n",
-                        "Data columns (total 24 columns):\n",
+                        "Data columns (total 23 columns):\n",
                         " #   Column                Non-Null Count  Dtype  \n",
                         "---  ------                --------------  -----  \n",
                         " 0   budget                4809 non-null   int64  \n",
@@ -611,11 +611,10 @@
                         " 18  vote_average          4809 non-null   float64\n",
                         " 19  vote_count            4809 non-null   int64  \n",
                         " 20  movie_id              4809 non-null   int64  \n",
-                        " 21  title                 4809 non-null   object \n",
-                        " 22  cast                  4809 non-null   object \n",
-                        " 23  crew                  4809 non-null   object \n",
-                        "dtypes: float64(3), int64(5), object(16)\n",
-                        "memory usage: 901.8+ KB\n"
+                        " 21  cast                  4809 non-null   object \n",
+                        " 22  crew                  4809 non-null   object \n",
+                        "dtypes: float64(3), int64(5), object(15)\n",
+                        "memory usage: 864.2+ KB\n"
                     ]
                 }
             ],
@@ -625,7 +624,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 64,
+            "execution_count": 92,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -634,7 +633,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 65,
+            "execution_count": 93,
             "metadata": {},
             "outputs": [
                 {
@@ -660,7 +659,6 @@
                             "      <th></th>\n",
                             "      <th>movie_id</th>\n",
                             "      <th>title</th>\n",
-                            "      <th>title</th>\n",
                             "      <th>overview</th>\n",
                             "      <th>genres</th>\n",
                             "      <th>keywords</th>\n",
@@ -673,7 +671,6 @@
                             "      <th>0</th>\n",
                             "      <td>19995</td>\n",
                             "      <td>Avatar</td>\n",
-                            "      <td>Avatar</td>\n",
                             "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
                             "      <td>[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"nam...</td>\n",
                             "      <td>[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\":...</td>\n",
@@ -683,7 +680,6 @@
                             "    <tr>\n",
                             "      <th>1</th>\n",
                             "      <td>285</td>\n",
-                            "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
                             "      <td>[{\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"...</td>\n",
@@ -699,10 +695,6 @@
                             "   movie_id                                     title  \\\n",
                             "0     19995                                    Avatar   \n",
                             "1       285  Pirates of the Caribbean: At World's End   \n",
-                            "\n",
-                            "                                      title  \\\n",
-                            "0                                    Avatar   \n",
-                            "1  Pirates of the Caribbean: At World's End   \n",
                             "\n",
                             "                                            overview  \\\n",
                             "0  In the 22nd century, a paraplegic Marine is di...   \n",
@@ -725,7 +717,7 @@
                             "1  [{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...  "
                         ]
                     },
-                    "execution_count": 65,
+                    "execution_count": 93,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -743,7 +735,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 66,
+            "execution_count": 94,
             "metadata": {},
             "outputs": [
                 {
@@ -769,7 +761,6 @@
                             "      <th></th>\n",
                             "      <th>movie_id</th>\n",
                             "      <th>title</th>\n",
-                            "      <th>title</th>\n",
                             "      <th>overview</th>\n",
                             "      <th>genres</th>\n",
                             "      <th>keywords</th>\n",
@@ -782,7 +773,6 @@
                             "      <th>0</th>\n",
                             "      <td>19995</td>\n",
                             "      <td>Avatar</td>\n",
-                            "      <td>Avatar</td>\n",
                             "      <td>[In the 22nd century, a paraplegic Marine is d...</td>\n",
                             "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
                             "      <td>[culture clash, future, space war, space colon...</td>\n",
@@ -792,7 +782,6 @@
                             "    <tr>\n",
                             "      <th>1</th>\n",
                             "      <td>285</td>\n",
-                            "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>[Captain Barbossa, long believed to be dead, h...</td>\n",
                             "      <td>[Adventure, Fantasy, Action]</td>\n",
@@ -804,7 +793,6 @@
                             "      <th>2</th>\n",
                             "      <td>206647</td>\n",
                             "      <td>Spectre</td>\n",
-                            "      <td>Spectre</td>\n",
                             "      <td>[A cryptic message from Bond’s past sends him ...</td>\n",
                             "      <td>[Action, Adventure, Crime]</td>\n",
                             "      <td>[spy, based on novel, secret agent, sequel, mi...</td>\n",
@@ -815,7 +803,6 @@
                             "      <th>3</th>\n",
                             "      <td>49026</td>\n",
                             "      <td>The Dark Knight Rises</td>\n",
-                            "      <td>The Dark Knight Rises</td>\n",
                             "      <td>[Following the death of District Attorney Harv...</td>\n",
                             "      <td>[Action, Crime, Drama, Thriller]</td>\n",
                             "      <td>[dc comics, crime fighter, terrorist, secret i...</td>\n",
@@ -825,7 +812,6 @@
                             "    <tr>\n",
                             "      <th>4</th>\n",
                             "      <td>49529</td>\n",
-                            "      <td>John Carter</td>\n",
                             "      <td>John Carter</td>\n",
                             "      <td>[John Carter is a war-weary, former military c...</td>\n",
                             "      <td>[Action, Adventure, Science Fiction]</td>\n",
@@ -844,13 +830,6 @@
                             "2    206647                                   Spectre   \n",
                             "3     49026                     The Dark Knight Rises   \n",
                             "4     49529                               John Carter   \n",
-                            "\n",
-                            "                                      title  \\\n",
-                            "0                                    Avatar   \n",
-                            "1  Pirates of the Caribbean: At World's End   \n",
-                            "2                                   Spectre   \n",
-                            "3                     The Dark Knight Rises   \n",
-                            "4                               John Carter   \n",
                             "\n",
                             "                                            overview  \\\n",
                             "0  [In the 22nd century, a paraplegic Marine is d...   \n",
@@ -881,7 +860,7 @@
                             "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]     Andrew Stanton  "
                         ]
                     },
-                    "execution_count": 66,
+                    "execution_count": 94,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -916,7 +895,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 67,
+            "execution_count": 95,
             "metadata": {},
             "outputs": [
                 {
@@ -942,7 +921,6 @@
                             "      <th></th>\n",
                             "      <th>movie_id</th>\n",
                             "      <th>title</th>\n",
-                            "      <th>title</th>\n",
                             "      <th>overview</th>\n",
                             "      <th>genres</th>\n",
                             "      <th>keywords</th>\n",
@@ -956,7 +934,6 @@
                             "      <th>0</th>\n",
                             "      <td>19995</td>\n",
                             "      <td>Avatar</td>\n",
-                            "      <td>Avatar</td>\n",
                             "      <td>[['In the 22nd century, a paraplegic Marine is...</td>\n",
                             "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
                             "      <td>[culture clash, future, space war, space colon...</td>\n",
@@ -967,7 +944,6 @@
                             "    <tr>\n",
                             "      <th>1</th>\n",
                             "      <td>285</td>\n",
-                            "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>Pirates of the Caribbean: At World's End</td>\n",
                             "      <td>[['Captain Barbossa, long believed to be dead,...</td>\n",
                             "      <td>[Adventure, Fantasy, Action]</td>\n",
@@ -980,7 +956,6 @@
                             "      <th>2</th>\n",
                             "      <td>206647</td>\n",
                             "      <td>Spectre</td>\n",
-                            "      <td>Spectre</td>\n",
                             "      <td>[['A cryptic message from Bond’s past sends hi...</td>\n",
                             "      <td>[Action, Adventure, Crime]</td>\n",
                             "      <td>[spy, based on novel, secret agent, sequel, mi...</td>\n",
@@ -992,7 +967,6 @@
                             "      <th>3</th>\n",
                             "      <td>49026</td>\n",
                             "      <td>The Dark Knight Rises</td>\n",
-                            "      <td>The Dark Knight Rises</td>\n",
                             "      <td>[[\"Following the death of District Attorney Ha...</td>\n",
                             "      <td>[Action, Crime, Drama, Thriller]</td>\n",
                             "      <td>[dc comics, crime fighter, terrorist, secret i...</td>\n",
@@ -1003,7 +977,6 @@
                             "    <tr>\n",
                             "      <th>4</th>\n",
                             "      <td>49529</td>\n",
-                            "      <td>John Carter</td>\n",
                             "      <td>John Carter</td>\n",
                             "      <td>[[\"John Carter is a war-weary, former military...</td>\n",
                             "      <td>[Action, Adventure, Science Fiction]</td>\n",
@@ -1023,13 +996,6 @@
                             "2    206647                                   Spectre   \n",
                             "3     49026                     The Dark Knight Rises   \n",
                             "4     49529                               John Carter   \n",
-                            "\n",
-                            "                                      title  \\\n",
-                            "0                                    Avatar   \n",
-                            "1  Pirates of the Caribbean: At World's End   \n",
-                            "2                                   Spectre   \n",
-                            "3                     The Dark Knight Rises   \n",
-                            "4                               John Carter   \n",
                             "\n",
                             "                                            overview  \\\n",
                             "0  [['In the 22nd century, a paraplegic Marine is...   \n",
@@ -1074,7 +1040,7 @@
                             "4  [\"John Carter is a war-weary  former military ...  "
                         ]
                     },
-                    "execution_count": 67,
+                    "execution_count": 95,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1093,7 +1059,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 68,
+            "execution_count": 96,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -1109,7 +1075,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 69,
+            "execution_count": 97,
             "metadata": {},
             "outputs": [],
             "source": [
